# fieldguide

./: .gitignore  .quartoignore  LICENSE  Makefile  PYTHON-SCENARIOS-PLAN.md  README.md  _quarto-halfletter.yml  _quarto-herodevs.yml  _quarto-leanpub.yml  _quarto-oreilly.yml  _quarto.yml  all_related_sections.txt  include-code.lua  index-old.md  index.md  index.qmd  install_deps.sh  install_node_deps.sh  install_private_repo.sh  install_python_deps.sh  mermaid-config.json  todo.md  verify_all.sh
.github/workflows/: deploy-fieldguide.yml
book/: _herodevs-footer.html  _herodevs-header.html  create_book.sh  create_sample.sh  custom.scss  herodevs-theme.scss  include-code.lua
book/content/: acknowledgements.md  authors.md  back_page.qmd  cheat-sheet.md  classpath-reality-check.md  comparison-table.md  conclusion.md  cover.tex  glossary.md  how-to-use.md  intro.md  scenarios.md  sponsors.md  start_here_control.qmd  start_here_trouble.qmd  triage.md
demo-dependencies/bom/v1/: pom.xml
demo-dependencies/lib-a/v1/: pom.xml
demo-dependencies/lib-a/v1-python/: pyproject.toml
demo-dependencies/lib-a/v2/: pom.xml
demo-dependencies/lib-a/v2-python/: pyproject.toml
demo-dependencies/lib-b/v1/: pom.xml
demo-dependencies/lib-b/v1-python/: pyproject.toml
demo-dependencies/lib-b/v2/: pom.xml
demo-dependencies/lib-b/v2-python/: pyproject.toml
demo-dependencies/lib-c/v1/: pom.xml
demo-dependencies/lib-c/v1-python/: pyproject.toml
demo-dependencies/lib-c/v2/: pom.xml
demo-dependencies/lib-c/v2-python/: pyproject.toml
demo-dependencies/lib-circle-a/v1/: pom.xml
demo-dependencies/lib-circle-b/v1/: pom.xml
demo-utils/: pom.xml
demos/: TOOL-VERSIONS.md
demos/gradle-demo/: verify.sh
demos/maven-demo/: pom.xml  verify.sh
demos/node-demo/: README.md  TOOL-VERSIONS.md  verify.sh
demos/python-demo/: TOOL-VERSIONS.md  verify.sh
demos/python-demo/scenario-11-private-index/poetry/: pyproject.toml
demos/python-demo/scenario-11-private-index/uv/: pyproject.toml
demos/python-demo/scenario-7-extras-groups/poetry/: pyproject.toml
demos/python-demo/scenario-8-markers/poetry/: pyproject.toml
demos/python-demo/scenario-9-exclusions-gap/uv/: pyproject.toml
demos/sbt-demo/: verify.sh
filters/: risks.lua  scenario-boxes.lua  scenario_badge.lua
latex/: a5-spacing.tex  a5-tuning.tex  back.tex  badges.tex  boxes.tex  chapter-style.tex  cover.tex  enhanced-clarity.tex  full-page-cover.tex  graphics.tex  halfletter-spacing.tex  halfletter-tuning.tex  toc.tex  typography-common.tex  watermark.tex
scripts/: audit_scenarios.py  build_node_fixtures.mjs  build_python_fixtures.py  epub-fixup.py
(+327 files in other folders)
