[project]
name = "p8-markers"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = ["demo-lib-c==1.0.0; python_version >= '3.8'", "demo-lib-d==1.0.0; python_version < '3.8'"]

[tool.poetry]
package-mode = false

[[tool.poetry.source]]
name = "demo-repo"
url = "http://127.0.0.1:8765/simple/"
priority = "primary"
